@@ -29,6 +29,7 @@
 #if ENABLE(CLIENT_BASED_GEOLOCATION)
 
 #include <wtf/PassRefPtr.h>
+#include <wtf/RefCounted.h>
 #include <wtf/RefPtr.h>
 
 namespace WebCore {
